# united-ops-ai

./: .gitignore  README.md  app.py  ingest.py  init_project.py  pyproject.toml  requirements.txt
data/test_index/: index.faiss  index.pkl
src/agents/: analyst.py  researcher.py  safety_auditor.py
src/graph/: nodes.py  state.py  workflow.py
src/simulator/: cockpit_chat.py
src/tools/: structural_tool.py  vector_tool.py
